--- a/WebSite5/AjaxTest7.html
+++ b/WebSite5/AjaxTest7.html
@@ -16,7 +16,7 @@
         {
             var xhttp = new XMLHttpRequest();
             xhttp.onreadystatechange = function () {
-                if (this.readyState == 4 && this.status == 200)
+                if (this.readyState == 4 && this.status == 200)//XMLHttpRequest.DONE
                 {
                     myFunction(this, i);
                 }
